# versification-specification

./: pyproject.toml
versification-sniffing/python/: usx2versification.py
